--- a/assigmnt_03_Ansible/ansible.cfg
+++ b/assigmnt_03_Ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory
 remote_user: vagrant
-peivate_key_file = ~/.ssh/ansible_key
-become: yes
+private_key_file = ~/.ssh/ansible_key
+#interpreter_python = /usr/bin/python3
 
